--- a/12MegaBlog/index.html
+++ b/12MegaBlog/index.html
@@ -9,5 +9,7 @@
   <body class="bg-gray-400">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    
+    <script src="https://cdn.tiny.cloud/1/64xtw48sju90zfd00frhyea8c69401n78674d8ldt50ml4bg/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
   </body>
 </html>
